# IPySCF

./: LICENCE.txt  README.md  ipyscfgui.py  pyproject.toml
src/: __init__.py  data.csv  program.py
src/tools/IPyGUIBSE/: basis.py  basisdata.py  bseGUI.py  compound.py  data.py  elementbasisdata.py  elements.json  elements_en.json  familydata.py  gaussian_primitives.py  gto.py  helpdoc.py  moleculedesign.py  moleculeproperty.py  periodictable.py  periodictable_en.py  qm.py  qmdbscreen.py  sto_ng.py  utils.py  x_ng.py
src/tools/IPyGUIBSE/docs/: help.doc
src/tools/IPyGUIBSE/docs/api/: help.doc
src/tools/IPyGUIBSE/docs/bundle/: help.doc
src/tools/IPyGUIBSE/docs/compose/: help.doc
src/tools/IPyGUIBSE/docs/convert/: help.doc
src/tools/IPyGUIBSE/docs/dp/: help.doc
src/tools/IPyGUIBSE/docs/fileio/: help.doc
src/tools/IPyGUIBSE/docs/ints/: help.doc
src/tools/IPyGUIBSE/docs/lut/: help.doc
src/tools/IPyGUIBSE/docs/manip/: help.doc
src/tools/IPyGUIBSE/docs/misc/: help.doc
src/tools/IPyGUIBSE/docs/printing/: help.doc
src/tools/IPyGUIBSE/docs/pyscf/: help.doc
src/tools/IPyGUIBSE/docs/scratch/: data.doc  ref.doc
src/tools/IPyGUIBSE/scratch/: data.doc
